--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,16 @@ android {
     }
 }
 
+ext {
+    supportLibVersion = '26.1.0'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation "com.android.support:design:${supportLibVersion}"
+    implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.volley:volley:1.1.0-rc2'
     compile 'com.github.yamin-elmakis:EasyLog:v1.5'
 }
