--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
 
 ext {
     supportLibVersion = '26.1.0'
+    roomVersion = '1.0.0'
+    glideVersion = '4.3.1'
 }
 
 dependencies {
@@ -27,7 +29,17 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${supportLibVersion}"
     implementation "com.android.support:design:${supportLibVersion}"
     implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
+    implementation "com.android.support:support-v4:${supportLibVersion}"
+    implementation "com.android.support:cardview-v7:${supportLibVersion}"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.volley:volley:1.1.0-rc2'
-    compile 'com.github.yamin-elmakis:EasyLog:v1.5'
+    implementation "android.arch.persistence.room:runtime:${roomVersion}"
+    implementation 'com.android.support:support-v4:26.1.0'
+    annotationProcessor "android.arch.persistence.room:compiler:${roomVersion}"
+
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation "com.github.bumptech.glide:glide:${glideVersion}"
+    annotationProcessor "com.github.bumptech.glide:compiler:${glideVersion}"
+
+    implementation 'com.github.yamin-elmakis:EasyLog:v1.5'
 }
