--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="dev.yamin.cryptcurrencyacademy">
 
     <application
+        android:name=".base.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".details.CoinDetailsActivity" />
-        <activity android:name=".alerts.EditAlertActivity"></activity>
+        <activity android:name=".alerts.EditAlertActivity"/>
     </application>
 
 </manifest>
