--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,6 @@ dependencies {
     implementation "com.android.support:cardview-v7:${supportLibVersion}"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation "android.arch.persistence.room:runtime:${roomVersion}"
-    implementation 'com.android.support:support-v4:26.1.0'
     annotationProcessor "android.arch.persistence.room:compiler:${roomVersion}"
 
     implementation 'com.android.volley:volley:1.1.0'
@@ -42,8 +41,7 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:${glideVersion}"
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
 
     implementation 'com.github.yamin-elmakis:EasyLog:v1.5'
-
-
 }
